Code pairs spacing fixed #90

--- a/stylesheets/shared/_codesplit.scss
+++ b/stylesheets/shared/_codesplit.scss
@@ -1,12 +1,12 @@
 .codesplit {
     font-size: 80%;
-    line-height: 1.4;
-    margin: 1.5em 0em 1em;
+    line-height: 1.5;
+    margin: 1.5em 0em;
 
     .pair {
         background: $color-lightest;
-        padding: 5px 10px;
-        margin: 2px 0;
+        padding: .2em 1em;
+        margin: 0 0 2px 0;
         position: relative;
         &:after {
     		content: "";
@@ -21,6 +21,7 @@
         .comment {
             float: right;
             width: 43%;
+            padding: .2em 0 0 0;
             p { margin: 0; }
         }
     }
@@ -51,7 +52,7 @@
             top: 100%;
             right: 0;
             float: none;
-            padding: .5em 0 .5em .5em;
+            padding: .5em;
             background: $color-lightest;
         }
     }
